# HomomorphiX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
docs/: TODO.md
include/: hx.hpp
include/integral/: integral.hpp
include/poly/: poly.hpp
include/traits/: traits.hpp
scripts/: clang-format.sh  clang-tidy.sh
tests/: CMakeLists.txt
tests/integral/: integral-test.cpp
tests/traits/: traits-test.cpp
